--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "body-parser": "^1.8.1",
     "ejs": "^3.0.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mysql": "^2.18.1"
   }
 }
