--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "rendering",
   "version": "1.0.0",
   "dependencies": {
-    "body-parser": "^1.8.1",
     "ejs": "^3.0.0",
     "express": "^4.16.4",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "multer": "^1.4.2"
   }
 }
