--- a/app/server/package.json
+++ b/app/server/package.json
@@ -5,6 +5,7 @@
     "bcrypt": "*",
     "ejs": "^3.1.2",
     "express": "^4.16.4",
+    "jsonwebtoken": "*",
     "multer": "^1.4.2",
     "mysql": "^2.18.1"
   }
