--- a/app/server/package.json
+++ b/app/server/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "dependencies": {
     "bcrypt": "*",
+    "cookie-parser": "*",
     "ejs": "^3.1.2",
     "express": "^4.16.4",
     "jsonwebtoken": "*",
