--- a/app/server/package.json
+++ b/app/server/package.json
@@ -6,8 +6,10 @@
     "cookie-parser": "*",
     "ejs": "^3.1.2",
     "express": "^4.16.4",
+    "http": "*",
     "jsonwebtoken": "*",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "socket.io": "*"
   }
 }
