--- a/app/server/package.json
+++ b/app/server/package.json
@@ -4,11 +4,13 @@
   "dependencies": {
     "bcrypt": "*",
     "cookie-parser": "*",
+    "crypto": "*",
     "ejs": "^3.1.2",
     "express": "^4.16.4",
     "http": "*",
     "jsonwebtoken": "*",
     "multer": "^1.4.2",
+    "multer-hash": "*",
     "mysql": "^2.18.1",
     "socket.io": "*"
   }
