--- a/app/server/package.json
+++ b/app/server/package.json
@@ -6,6 +6,8 @@
     "cookie-parser": "*",
     "ejs": "^3.1.2",
     "express": "^4.16.4",
+    "express-graphql": "^0.9.0",
+    "graphql": "^15.0.0",
     "jsonwebtoken": "*",
     "multer": "^1.4.2",
     "mysql": "^2.18.1"
